--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,23 @@
 {
-  "files": [],
-  "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }]
+	"compilerOptions": {
+		"forceConsistentCasingInFileNames": true,
+		"incremental": true,
+		"target": "es2022",
+		"module": "commonjs",
+		"lib": ["dom", "es2022"],
+		"jsx": "react-jsx",
+		"strict": true,
+		"sourceMap": true,
+		"moduleResolution": "node",
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"resolveJsonModule": true,
+		"allowJs": true,
+		"outDir": ".erb/dll",
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./src/renderer/src/*"]
+		}
+	},
+	"exclude": ["test", "release/build", "release/app/dist", ".erb/dll"]
 }
